[tool.poetry]
name = "light-runners"
version = "0.1.0"
description = ""
authors = ["Clement Walter <clement0walter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
